--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   geocoding: ^2.1.0
   http: ^0.13.5
   hive_flutter: ^1.1.0
+  map_launcher: ^2.5.0+1
 
 dev_dependencies:
   flutter_test:
